# pcd_object_transfer

./: .gitignore  CMakeLists.txt  README.md  basicCMakeForPcl.txt
data/: .gitignore
include/: Constants.h  CustomPointTypes.h  UserDefinedParams.h  main.h
src/: main.cpp
src/examples/: main2.cpp
src/helpers/: basic_registration.cpp  bin_to_pcd.cpp  concat_spiked_plane_with_other_pcd_in_same_coordinate_system.cpp  concatenate_simple_plane_with_other_pcd_in_same_coordinate_system.cpp  concatenate_two_pcds_with_y_axis_alignment.cpp  cuboid_pcd.cpp  extract_pcd_for_object.cpp  icp_registration_with_iterative_view.cpp  icp_with_normal_iter_view.cpp  inclined_plane_pcd.cpp  pcd_visualizer.cpp  pcd_visualizer_icp.cpp  plane_pcd.cpp  point_with_label_and_extract_object.cpp  print.cpp  print_from_bin_file.cpp  scale_pcd.cpp  spiked_plane_pcd.cpp  sub_sampling_pcd.cpp  transform_pcd.cpp  transform_pcd_using_matrix4f.cpp
